--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -1,51 +1,68 @@
 leftWidth = 500px;
-rightWidth = 750px;
+rightWidth = 400px;
 
 .index-box {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(245, 245, 245);
+  background: rgb(69, 163, 250);
 
   .index-inner-box {
     width: leftWidth + rightWidth;
     display: flex;
-    box-shadow: 0 0 20px #ddd;
-    background: rgba(0, 0, 0, 0);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
 
     .left-box {
-      background: #fff;
+      position: relative;
       width: leftWidth;
+
+      .image-background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .text-box {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        height: 100%;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+        .main-describe {
+          font-size: 42px;
+          margin-bottom: 0;
+
+          &:first-child {
+            margin-top: 100px;
+          }
+        }
+
+        .sub-describe {
+          padding: 40px 0 50px 0;
+        }
+      }
+    }
+
+    .right-box {
+      background: #fff;
+      width: rightWidth;
       padding: 60px 80px;
-      border-radius: 10px 0 0 10px;
 
       .logo {
         color: #40a9ff;
 
         span {
           color: #666;
-        }
-      }
-
-      .nav {
-        margin-top: 20px;
-
-        .focus {
-          font-size: 20px;
-          font-weight: 900;
-          color: #000;
-        }
-
-        .unfocus {
-          color: rgb(170, 170, 190);
-        }
-
-        .button {
-          border: 0;
-          background: rgba(0, 0, 0, 0);
-          cursor: pointer;
-          margin-right: 20px;
         }
       }
 
@@ -69,25 +86,6 @@ rightWidth = 750px;
             padding-left: 5px;
           }
         }
-      }
-    }
-
-    .right-box {
-      background-image: linear-gradient(to bottom right, #2e8de1, #b65eba);
-      width: rightWidth;
-      padding-left: 200px;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      border-radius: 0 10px 10px 0;
-
-      .main-describe {
-        font-size: 42px;
-        margin-bottom: 0;
-      }
-
-      .sub-describe {
-        margin-top: 5px;
       }
     }
   }
