--- a/src/style/home/home.styl
+++ b/src/style/home/home.styl
@@ -40,3 +40,12 @@
     text-align: center;
   }
 }
+
+.home-index-box {
+  display: flex;
+  justify-content: center;
+
+  .home-index-img {
+    height: 70vh;
+  }
+}
