--- a/src/style/home/staff/write-detail.styl
+++ b/src/style/home/staff/write-detail.styl
@@ -33,42 +33,17 @@
   }
 
   .write-form-box {
-    .description-box {
-      border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+  }
 
-      .description-title-box {
-        span {
-          font-size: 16px;
-        }
+  .write-bottom-box {
+    padding-top: 10px;
+    text-align: center;
 
-        .plus-icon {
-          padding-left: 10px;
-        }
-      }
-
-      .modify-button {
-        background: #52c41a;
-        border: 1px solid #52c41a;
-      }
-
-      .delete-button {
-        background: #f5222d;
-        border: 1px solid #f5222d;
-        margin-left: 20px;
-      }
-    }
-
-    .inner-form-box {
-      border-bottom: 1px solid #ddd;
-    }
-
-    .link-icon {
-      font-size: 16px;
-    }
-
-    span {
-      margin-left: 5px;
-      font-size: 14px;
+    .submit-button {
+      background: #f5222d;
+      border: 1px solid #f5222d;
     }
   }
 }
