完成统计员页面demo

--- a/src/style/home/staff/write-detail.styl
+++ b/src/style/home/staff/write-detail.styl
@@ -47,3 +47,16 @@
     }
   }
 }
+
+.download-button-box {
+  display: flex;
+  justify-content: center;
+
+  .download-button {
+    width: 300px;
+  }
+}
+
+.description-box {
+  padding: 10px;
+}
