--- a/src/style/home/examination-manager/examination-list.styl
+++ b/src/style/home/examination-manager/examination-list.styl
@@ -1,4 +1,4 @@
-.modify-list-box {
+.examination-list-box {
   padding: 10px;
   box-shadow: 0 0 5px #ddd;
   margin-bottom: 10px;
@@ -27,7 +27,7 @@
     margin-bottom: 0;
   }
 
-  .write-list-box {
+  .list-content-box {
     .list-title-box {
       padding-bottom: 10px;
       display: flex;
@@ -38,11 +38,11 @@
         min-width: 120px;
       }
 
-      .button {
+      .export-all-button {
         background: #52c41a;
         border: 1px solid #52c41a;
         margin-left: 20px;
-        max-width: 80px;
+        max-width: 180px;
       }
     }
   }
