--- a/src/style/home/admin/account-time-set.styl
+++ b/src/style/home/admin/account-time-set.styl
@@ -13,4 +13,35 @@
     color: #fff;
   }
 
+  .time-staff-content-box {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
+    .content-left-box {
+      width: 30%;
+      margin-right: 30px;
+
+      .save-button {
+        width: 180px;
+      }
+    }
+
+    .content-middle-box {
+      width: 30%;
+      margin-right: 30px;
+
+      .save-button {
+        width: 180px;
+      }
+    }
+
+    .content-right-box {
+      width: 30%;
+
+      .save-button {
+        width: 180px;
+      }
+    }
+  }
 }
