--- a/src/style/home/review-manager/review-detail.styl
+++ b/src/style/home/review-manager/review-detail.styl
@@ -1,4 +1,4 @@
-.examination-detail-box {
+.review-detail-box {
   padding: 10px;
   box-shadow: 0 0 5px #ddd;
   margin-bottom: 10px;
@@ -62,7 +62,7 @@
       }
     }
 
-    .examination-form-box {
+    .review-form-box {
       border-bottom: 1px solid #ddd;
       padding: 10px;
       width: 100%;
@@ -76,7 +76,7 @@
   }
 }
 
-.examine-modal-box {
+.review-modal-box {
   display: flex;
   align-items: center;
   flex-direction: column;
