--- a/src/style/home/review-manager/review-list.styl
+++ b/src/style/home/review-manager/review-list.styl
@@ -1,4 +1,4 @@
-.examination-list-box {
+.review-list-box {
   padding: 10px;
   box-shadow: 0 0 5px #ddd;
   margin-bottom: 10px;
@@ -32,7 +32,7 @@
       padding-bottom: 10px;
       display: flex;
       flex-direction: row;
-      width: 30%;
+      width: 100%;
 
       .list-select {
         min-width: 120px;
@@ -43,6 +43,11 @@
         border: 1px solid #52c41a;
         margin-left: 20px;
         max-width: 180px;
+      }
+
+      .search {
+        width: 150px;
+        margin-left: 20px;
       }
     }
   }
