--- a/src/style/home/staff/write-item.styl
+++ b/src/style/home/staff/write-item.styl
@@ -1,7 +1,8 @@
-.write-basic-box {
+.write-item-box {
   border-bottom: 1px solid #ddd;
+  padding-top: 20px;
 
-  .basic-title-box {
+  .item-title-box {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -18,9 +19,10 @@
         font-size: 16px;
       }
     }
+
   }
 
-  .basic-bottom-box {
+  .item-bottom-box {
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
