完成三种角色列表查看以及基本信息查询功能

--- a/src/style/home/business-manager/verify-list.styl
+++ b/src/style/home/business-manager/verify-list.styl
@@ -38,6 +38,11 @@
         min-width: 120px;
       }
 
+      .search {
+        min-width: 180px;
+        margin-left: 20px;
+      }
+
       .export-all-button {
         background: #52c41a;
         border: 1px solid #52c41a;
