--- a/src/style/home/staff/write-item.styl
+++ b/src/style/home/staff/write-item.styl
@@ -20,11 +20,35 @@
       }
     }
 
+    .item-bottom-box {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 20px;
+    }
   }
 
-  .item-bottom-box {
+  .write-description-title {
     display: flex;
-    justify-content: center;
-    padding-bottom: 20px;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+
+    .description-title-text {
+      span {
+        font-size: 14px;
+        font-weight: 600;
+        padding-right: 20px;
+      }
+    }
+
+    .description-title-button {
+      .link-button {
+        font-size: 20px;
+      }
+    }
+  }
+
+  .write-description-box {
+    padding: 20px;
   }
 }
