完成普通员工页面

--- a/src/style/home/staff/write-detail.styl
+++ b/src/style/home/staff/write-detail.styl
@@ -33,7 +33,6 @@
   }
 
   .write-form-box {
-    border-bottom: 1px solid #ddd;
     padding: 10px;
   }
 
@@ -44,6 +43,12 @@
     .submit-button {
       background: #f5222d;
       border: 1px solid #f5222d;
+    }
+
+    .text-box {
+      .important-text {
+        color: #f5222d;
+      }
     }
   }
 }
