修改时间设置bug以及密码修改warning,完成提交按钮修改

--- a/src/style/home/home.styl
+++ b/src/style/home/home.styl
@@ -17,6 +17,11 @@
       margin-left: 10px;
     }
   }
+
+  .user-info {
+    margin-left: 16px;
+    color: #fff;
+  }
 }
 
 .home-content {
@@ -24,6 +29,10 @@
 
   .home-header {
     background: #fff;
+
+    .exit-box {
+      text-align: right;
+    }
   }
 
   .content-box {
