完成统计员信息查看

--- a/src/style/home/business-manager/verify-item-detail.styl
+++ b/src/style/home/business-manager/verify-item-detail.styl
@@ -20,6 +20,31 @@
       }
     }
   }
+
+  .verify-description-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+
+    .description-title-text {
+      span {
+        font-size: 14px;
+        font-weight: 600;
+        padding-right: 20px;
+      }
+    }
+
+    .description-title-button {
+      .link-button {
+        font-size: 14px;
+      }
+    }
+  }
+
+  .verify-description-box {
+    padding: 20px;
+  }
 }
 
 .button-box {
