--- a/src/style/home/business-manager/verify-detail.styl
+++ b/src/style/home/business-manager/verify-detail.styl
@@ -40,7 +40,7 @@
 
     .list-title-box {
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       flex-direction: row;
       width: 100%;
 
@@ -63,7 +63,6 @@
     }
 
     .verify-form-box {
-      border-bottom: 1px solid #ddd;
       padding: 10px;
       width: 100%;
     }
@@ -71,7 +70,6 @@
 }
 
 .text-box {
-
   .important-text {
     color: #f5222d;
   }
