--- a/src/style/home/review-manager/review-detail.styl
+++ b/src/style/home/review-manager/review-detail.styl
@@ -40,7 +40,7 @@
 
     .list-title-box {
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       flex-direction: row;
       width: 100%;
 
@@ -63,7 +63,6 @@
     }
 
     .review-form-box {
-      border-bottom: 1px solid #ddd;
       padding: 10px;
       width: 100%;
     }
