--- a/src/style/home/review-manager/review-item-detail.styl
+++ b/src/style/home/review-manager/review-item-detail.styl
@@ -17,4 +17,29 @@
       font-size: 16px;
     }
   }
+
+  .review-description-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+
+    .description-title-text {
+      span {
+        font-size: 14px;
+        font-weight: 600;
+        padding-right: 20px;
+      }
+    }
+
+    .description-title-button {
+      .link-button {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+.review-description-box {
+  padding: 20px;
 }
