完成评审员和统计员附件下载

--- a/src/style/home/business-manager/verify-item-detail.styl
+++ b/src/style/home/business-manager/verify-item-detail.styl
@@ -19,6 +19,12 @@
         font-size: 16px;
       }
     }
+
+    .download-button-box {
+      .download-button {
+        width: 300px;
+      }
+    }
   }
 
   .verify-description-title {
