--- a/src/style/home/review-manager/review-item-detail.styl
+++ b/src/style/home/review-manager/review-item-detail.styl
@@ -16,6 +16,12 @@
       color: rgb(51, 68, 84);
       font-size: 16px;
     }
+
+    .download-button-box {
+      .download-button {
+        width: 300px;
+      }
+    }
   }
 
   .review-description-title {
