--- a/src/style/home/business-manager/verify-item-detail.styl
+++ b/src/style/home/business-manager/verify-item-detail.styl
@@ -8,15 +8,20 @@
     justify-content: space-between;
 
     .title-left-box {
+      color: rgb(51, 68, 84);
+
       .icon {
-        color: rgb(51, 68, 84);
         font-size: 20px;
         margin-right: 16px;
       }
 
       span {
-        color: rgb(51, 68, 84);
         font-size: 16px;
+      }
+
+      .content-tag {
+        font-size: 12px;
+        margin-left: 16px;
       }
     }
 
@@ -38,6 +43,12 @@
         font-size: 14px;
         font-weight: 600;
         padding-right: 20px;
+      }
+
+      .content-tag {
+        font-size: 12px;
+        font-weight: 400;
+        padding-right: 8px;
       }
     }
 
