完成评分的逻辑,修改了一些西重复请求的bug

--- a/src/style/home/staff/write-item.styl
+++ b/src/style/home/staff/write-item.styl
@@ -8,14 +8,14 @@
     justify-content: space-between;
 
     .title-left-box {
+      color: rgb(51, 68, 84);
+
       .icon {
-        color: rgb(51, 68, 84);
         font-size: 20px;
         margin-right: 16px;
       }
 
       span {
-        color: rgb(51, 68, 84);
         font-size: 16px;
       }
     }
@@ -38,6 +38,12 @@
         font-size: 14px;
         font-weight: 600;
         padding-right: 20px;
+      }
+
+      .content-tag {
+        font-size: 12px;
+        font-weight: 400;
+        padding-right: 8px;
       }
     }
 
