--- a/src/style/home/review-manager/review-item-detail.styl
+++ b/src/style/home/review-manager/review-item-detail.styl
@@ -5,16 +5,20 @@
   .detail-title-box {
     display: flex;
     flex-direction: row;
+    color: rgb(51, 68, 84);
 
     .icon {
-      color: rgb(51, 68, 84);
       font-size: 20px;
       margin-right: 16px;
     }
 
     span {
-      color: rgb(51, 68, 84);
       font-size: 16px;
+    }
+
+    .content-tag {
+      font-size: 12px;
+      margin-left: 16px;
     }
 
     .download-button-box {
@@ -35,6 +39,12 @@
         font-size: 14px;
         font-weight: 600;
         padding-right: 20px;
+      }
+
+      .content-tag {
+        font-size: 12px;
+        font-weight: 400;
+        padding-right: 8px;
       }
     }
 
