--- a/src/style/home/staff/write-basic.styl
+++ b/src/style/home/staff/write-basic.styl
@@ -7,15 +7,20 @@
     justify-content: space-between;
 
     .title-left-box {
+      color: rgb(51, 68, 84);
+
       .icon {
-        color: rgb(51, 68, 84);
         font-size: 20px;
         margin-right: 16px;
       }
 
       span {
-        color: rgb(51, 68, 84);
         font-size: 16px;
+      }
+
+      .content-tag {
+        font-size: 12px;
+        margin-left: 16px;
       }
     }
   }
