完成评审员查找

--- a/src/style/home/review-manager/review-list.styl
+++ b/src/style/home/review-manager/review-list.styl
@@ -33,6 +33,7 @@
       display: flex;
       flex-direction: row;
       width: 100%;
+      justify-content: space-between;
 
       .list-select {
         min-width: 120px;
@@ -49,6 +50,24 @@
         width: 150px;
         margin-left: 20px;
       }
+    }
+
+    .search-score-box {
+      display: flex;
+      flex-direction: row;
+      margin-bottom: 20px;
+
+      .select {
+        margin-right: 20px;
+      }
+    }
+  }
+
+  .table-inner-info-box {
+    width: 100%;
+
+    span {
+      margin-left: 20px;
     }
   }
 }
