--- a/src/style/home/business-manager/verify-list.styl
+++ b/src/style/home/business-manager/verify-list.styl
@@ -32,14 +32,13 @@
       padding-bottom: 10px;
       display: flex;
       flex-direction: row;
-      width: 30%;
+      width: 60%;
 
       .list-select {
         min-width: 120px;
       }
 
       .search {
-        min-width: 180px;
         margin-left: 20px;
       }
 
@@ -48,6 +47,14 @@
         border: 1px solid #52c41a;
         margin-left: 20px;
         max-width: 180px;
+      }
+
+      .verify-item-select-box {
+        min-width: 540px;
+        display: flex;
+        align-items: left;
+        flex-direction: column;
+        margin-left: 20px;
       }
     }
   }
