--- a/src/style/home/staff/write-welcome.styl
+++ b/src/style/home/staff/write-welcome.styl
@@ -30,5 +30,12 @@
     .button {
       min-width: 50px;
     }
+
+    .export-button {
+        background: #52c41a;
+        border: 1px solid #52c41a;
+        margin-left: 20px;
+        max-width: 180px;
+    }
   }
 }
