完善核实等功能

--- a/src/style/home/staff/write-item.styl
+++ b/src/style/home/staff/write-item.styl
@@ -18,6 +18,11 @@
       span {
         font-size: 16px;
       }
+
+      .content-tag {
+        font-size: 12px;
+        margin-left: 16px;
+      }
     }
 
     .item-bottom-box {
