新增学位,修改籍贯为cascader

--- a/src/style/home/staff/write-basic.styl
+++ b/src/style/home/staff/write-basic.styl
@@ -1,6 +1,11 @@
 .write-basic-box {
   border-bottom: 1px solid #ddd;
 
+  .nativePlace-input-box {
+    display: flex;
+    flex-direction: row;
+  }
+
   .basic-title-box {
     display: flex;
     flex-direction: row;
