完成修改默认密码的功能

--- a/src/style/home/admin/account-list.styl
+++ b/src/style/home/admin/account-list.styl
@@ -30,6 +30,10 @@
         margin-right: 20px;
       }
 
+      .primary-button {
+        margin-right: 20px;
+      }
+
       .export-button {
         background: #52c41a;
         border: 1px solid #52c41a;
