完成普通员工上传奖项信息

--- a/src/style/home/staff/write-inner-modal.styl
+++ b/src/style/home/staff/write-inner-modal.styl
@@ -1,6 +1,12 @@
 .inner-form-box {
   .inner-alert {
     margin-bottom: 15px;
+
+    .text-box {
+      .important-text {
+        color: #f5222d;
+      }
+    }
   }
 
   .half-button {
@@ -9,5 +15,9 @@
 
   .button {
     min-width: 300px;
+  }
+
+  .img {
+    padding-bottom: 20px;
   }
 }
