--- a/src/style/home/staff/write-welcome.styl
+++ b/src/style/home/staff/write-welcome.styl
@@ -32,10 +32,16 @@
     }
 
     .export-button {
-        background: #52c41a;
-        border: 1px solid #52c41a;
-        margin-left: 20px;
-        max-width: 180px;
+      background: #52c41a;
+      border: 1px solid #52c41a;
+      margin-left: 20px;
+      max-width: 180px;
+    }
+  }
+
+  .write-list-box {
+    .icon {
+      padding-left: 10px;
     }
   }
 }
