修改得分的间距

--- a/src/style/home/staff/write-welcome.styl
+++ b/src/style/home/staff/write-welcome.styl
@@ -44,4 +44,14 @@
       padding-left: 10px;
     }
   }
+
+  .table {
+    .table-inner-info-box {
+      width: 100%;
+
+      span {
+        margin-left: 20px;
+      }
+    }
+  }
 }
