完成奖项的修改

--- a/src/style/home/review-manager/review-item-detail.styl
+++ b/src/style/home/review-manager/review-item-detail.styl
@@ -54,6 +54,11 @@
       }
     }
   }
+  
+  .description-str-box{
+    display: flex;
+    flex-direction: column
+  }
 }
 
 .review-description-box {
