--- a/src/style/home/business-manager/verify-item-detail.styl
+++ b/src/style/home/business-manager/verify-item-detail.styl
@@ -56,6 +56,11 @@
   .verify-description-box {
     padding: 20px;
   }
+
+  .description-str-box{
+    display: flex;
+    flex-direction: column
+  }
 }
 
 .download-button-box {
