--- a/src/style/home/staff/write-basic.styl
+++ b/src/style/home/staff/write-basic.styl
@@ -30,6 +30,11 @@
     }
   }
 
+  .description-str-box{
+    display: flex;
+    flex-direction: column
+  }
+
   .alert {
     font-weight: 600;
   }
